# hospital_registration

./: .env_example  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  package-lock.json  package.json  pyproject.toml
alembic/: env.py
alembic/versions/: 2023_05_11_2122-11a337710606_init_migration.py  2023_05_12_2348-e42f62e00b5f_add_snils_and_telephone.py
app/: main.py
app/api/api_v1/: endpoints.py
app/core/: config.py  db.py
app/modules/appointment/: api.py  api_services.py  crud.py  examples.py  models.py
app/modules/user/: api.py  crud.py  examples.py  models.py
app/modules/users/: api.py  crud.py  examples.py  models.py
plugins/: vuetify.js
public/: index.html
src/: App.vue  main.js
src/components/: CreatePatientDialog.vue  PatientDelete.vue  PatientDialog.vue  PatientRedact.vue  PatientRegister.vue  PatientTable.vue
src/jsons/: diagnosisStatus.json  directionType.json  kindOfHelp.json  organizations.json
src/services/: HttpService.js  patientService.js  snilsService.js
