[tool.poetry]
name = "hospital-registration"
version = "0.1.0"
description = ""
authors = ["keshe4ka <a.anaschenko@btc-s.ru>"]
readme = "README.md"
packages = [{include = "hospital_registration"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
sqlmodel = "^0.0.8"
python-dotenv = "^1.0.0"
uvicorn = "^0.22.0"
psycopg2 = "^2.9.6"
alembic = "^1.10.4"
zeep = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
